--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
@@ -40,5 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://hy0ni.github.io/react-app"
+  "homepage": "https://hy0ni.github.io/react-app",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
